2005-07-04 Adam Schreiber <sadam@clemson.edu>
	* help/C/seahorse.xml: Added text for Text Editor(bug #309360)

2005-07-03  Adam Schreiber <sadam@clemson.edu>
	* help/C/seahorse.xml: Begin Documentation Overhaul (bug #309360)
	* src/seahorse-generate-select.glade: Fix problem where pressing
	<return> doesn't activate continue button.	
	* src/seahorse-keyserver-search.glade: Fix problem where pressing
	<return> doesn't activate search button.
    	Patch by Adam Schreiber (bug #157818)
    	
2005-06-04  Nate Nielsen  <nielsen@memberwebs.com>

	* Merged seahorse-0-8 changes into HEAD

2005-06-04  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

2005-06-01  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/nautilus/seahorse-pgp-preferences.c: Fix 
    compilation problem with WITH_AGENT is not defined.
    * INSTALL: Added howl to optional dependency listing.
    
2005-05-21  Nate Nielsen  <nielsen@memberwebs.com>

    * data/seahorse.schemas.in: As Randall said, it's called Bonjour, not 
    Opentalk. 
    
2005-05-20  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in:
    * daemon/Makefile.am:
    * daemon/seahorse-daemon.c:
    * daemon/seahorse-daemon.h:
    * daemon/seahorse-hkp-server.c:
    * daemon/seahorse-sharing.c:
    * data/seahorse.schemas.in:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-dns-sd.c:
    * libseahorse/seahorse-dns-sd.h:
    * libseahorse/seahorse-gconf.h:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-prefs.glade:
    * libseahorse/seahorse-server-source.c:
    * libseahorse/seahorse-server-source.h:
    * libseahorse/seahorse-util.c: 
    * libseahorse/seahorse-util.h:
    * pixmaps/Makefile.am:
    * pixmaps/seahorse-share-keys.png:
    * pixmaps/seahorse-share-keys.xcf:
    * src/seahorse-keyserver-search.c:
    * src/seahorse-keyserver-search.glade: Add DNS-SD key sharing